Footer does no longer overlap content

--- a/apps/front_page/static/css/base-mycss.css
+++ b/apps/front_page/static/css/base-mycss.css
@@ -10,7 +10,7 @@
 }
 
 .cContent {
-  position: absolute;
+  position: relative;
   left: 10%;
   height: 100%;
   width: 90%;
